--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">What you are is what you have been. What you'll be is what you do now. </span>
+            <span id="quote"></span>
         </div>
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">- Buddha</span>
+            <span id="author"></span>
         </div>
         <div class="button-container">
             <button class="twitter-button" id="twitter" title="Tweet This!">
@@ -29,8 +29,11 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+    <div class="loader" id="loader">
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
+
 </body>
 
 </html>
